# zmk-feature-trackball-rpc

./: CMakeLists.txt  Kconfig
dts/bindings/: lism,input-processor-accel.yaml  lism,input-processor-gesture.yaml  lism,input-processor-runtime-scroll-invert.yaml  lism,input-processor-temp-layer.yaml  lism,trackball-rpc.yaml  vendor-prefixes.txt
src/: lism_accel_cursor.c  lism_aml_temp_layer.c  lism_combo.h  lism_combo_rpc.c  lism_gesture.c  lism_runtime_combo.c  lism_runtime_scroll_invert.c  trackball_rpc.c
zephyr/: module.yml
